--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,6 +88,9 @@ dependencies {
     implementation "androidx.room:room-ktx:2.5.2"
 
     implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.0"))
+
+    //coin dependency
+    implementation "io.coil-kt:coil-compose:1.4.0"
 }
 
 // Allow references to generated code
