--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,6 +91,9 @@ dependencies {
 
     //coin dependency
     implementation "io.coil-kt:coil-compose:1.4.0"
+
+    //navigation dependency
+    implementation "androidx.navigation:navigation-compose:2.6.0"
 }
 
 // Allow references to generated code
