--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,13 +65,13 @@ dependencies {
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
-
-    implementation "androidx.hilt:hilt-navigation-compose:1.1.0-alpha01"
+    implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.0"))
 
     //hilt dependency
     implementation "com.google.dagger:hilt-android:2.44"
     kapt "com.google.dagger:hilt-compiler:2.44"
     kapt "androidx.hilt:hilt-compiler:1.0.0"
+    implementation "androidx.hilt:hilt-navigation-compose:1.1.0-alpha01"
 
     // Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
@@ -87,13 +87,14 @@ dependencies {
     // Kotlin Extensions and Coroutines support for Room
     implementation "androidx.room:room-ktx:2.5.2"
 
-    implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.0"))
-
     //coin dependency
     implementation "io.coil-kt:coil-compose:1.4.0"
 
     //navigation dependency
     implementation "androidx.navigation:navigation-compose:2.6.0"
+
+    //permission dependency
+    implementation "com.google.accompanist:accompanist-permissions:0.24.9-beta"
 }
 
 // Allow references to generated code
